# pointcloud_compression

./: .gitignore  CMakeLists.txt  README.md  bag_benchmark.desktop  package.xml
codec/: codec.hpp
src/: bag_reader.cpp
